--- a/spotify.css
+++ b/spotify.css
@@ -59,8 +59,10 @@ body{
   margin: 16px 0;
 }
 .header{
+  background-color: black;
   display: flex;
   justify-content: space-between;
+  height: 60px;
 }
 .header > *{
   padding: 8px;
@@ -72,6 +74,8 @@ body{
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
+  overflow-y: scroll;
+  max-height: 70vh;
 }
 .card{
   width: 145px;
@@ -94,4 +98,35 @@ body{
   opacity: 0;
   transition: all 1s ease-out;
 }
+.buttons > *{
+  margin: 0 12px;
 
+}
+.signupbtn{
+  background-color: black;
+  color: rgb(82, 82, 82);
+  border-radius: 23px;
+  font-weight: bold;
+  width: 79px;
+  padding: 8px;
+  cursor: pointer;
+  font-size: 16px;
+  outline: none;
+  border: none;
+}
+.signupbtn:hover{
+ font-size: 17px;
+}
+.loginbtn{
+  background-color: white;
+  border-radius: 23px;
+  color: black;
+  font-weight: bold;
+  width: 79px;
+  padding: 8px;
+  cursor: pointer;
+  font-size: 16px;
+}
+.loginbtn:hover{
+  font-size: 17px;
+ }
