--- a/spotify.css
+++ b/spotify.css
@@ -142,8 +142,28 @@ body{
   gap: 16px;
  }
 .songList ul{
-  padding: 10px 42px;
+  padding: 0 12px;
 }
-songList ul li{
-  list-style-type: decimal;
+.songList ul li{
+  list-style: decimal;
+  display: flex;
+  gap: 12px;
+  cursor: pointer;
+  padding: 12px 0;
+  justify-content: space-between;
+}
+.songList .info{
+  font-size: 13px;
+  width: 344px;
+}
+
+.playnow{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.playnow span{
+  font-size: 12px;
+  width: 64px;
+  padding: 10px 0;
 }
