songs in your playlist are able to play now also seekbar is added

--- a/spotify.css
+++ b/spotify.css
@@ -130,16 +130,25 @@ body{
   font-size: 17px;
  }
  .playbar{
-  position: absolute;
-  bottom: 0;
-  background-color: rgb(4, 81, 44);
-  width: 95%;
+  position: fixed;
+  bottom: 30px;
+  /* background-color: black; */
+  width: 70vw;
   padding: 10px;
+  height: 40px;
  }
  .songbuttons{
   display: flex;
   justify-content: center;
   gap: 16px;
+ }
+ .songbuttons img{
+   cursor: pointer;
+ }
+ .songList{
+  height: 344px;
+  overflow: auto;
+  margin: 44px 0;
  }
 .songList ul{
   padding: 0 12px;
@@ -166,4 +175,24 @@ body{
   font-size: 12px;
   width: 64px;
   padding: 10px 0;
+}
+.seekbar{
+  cursor: pointer;
+  position: absolute;
+  bottom: 0;
+  margin: 6px 0;
+  height: 3px;
+  width: 70vw;
+  background-color: white;
+
+}
+.circle{
+  position: relative;
+  bottom: 5px;
+  left: 0%;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  background-color: white;
+  transition: left 0.5s;
 }
