seekbar and playbutton are clearly functionable now

--- a/spotify.css
+++ b/spotify.css
@@ -181,7 +181,7 @@ body{
   position: absolute;
   bottom: 0;
   margin: 6px 0;
-  height: 3px;
+  height: 4px;
   width: 70vw;
   background-color: white;
 
@@ -195,4 +195,8 @@ body{
   border-radius: 50%;
   background-color: white;
   transition: left 0.5s;
+}
+.abovebar{
+  display: flex;
+  justify-content: space-between;
 }
