somewhat website is responsive

--- a/spotify.css
+++ b/spotify.css
@@ -39,6 +39,18 @@ body{
 .heading img{
     width: 15px;
 }
+.hamburger{
+  display: none;
+}
+.hamburgerComtainer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 14px;
+}
+.left .close{
+  display: none;
+}
 .library{
   min-height: 74.5vh;
   position: relative;
@@ -73,7 +85,7 @@ body{
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
-  overflow-y: scroll;
+  overflow-y: auto;
   max-height: 70vh;
 }
 .card{
@@ -199,4 +211,35 @@ body{
 .abovebar{
   display: flex;
   justify-content: space-between;
+}
+
+@media (max-width: 1176px) {
+  .left{
+    position: absolute;
+    left: -120%;
+    transition: all 0.3s;
+    z-index: 1;
+    width: 360px;
+    background-color: black;
+
+  }
+  .left .close{
+   display: block;
+  position: absolute;
+  right: 31px;
+  top: 25px;
+  width: 29px;
+  }
+  .right{
+    width: 100vw;
+  }
+  .playbar{
+    width: 90vw;
+  }
+  .seekbar{
+    width: 95vw;
+  }
+  .hamburger{
+    display: block;
+  }
 }
